--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,100 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+/* ----------------------- App -------------------------*/
+
+.app {
+  color: white;
+  margin: 0;
+  padding: 0; 
+  display: grid;
+  grid-template-areas: 
+      "nav nav"
+      "main main"
+      ;
+      
+  grid-template-columns: 4fr;
+  grid-template-rows: 20% 1fr;
+  row-gap: 10px;
+  column-gap: 15px;
+
+  font-family: headerFont;
+  font-size: 30px;
+  height: 100%;
+}
+
+.nav {
+  color: rgb(0, 0, 0);
+  grid-area: nav;
+  /* background-color: rgba(48, 47, 61, 0.7); */
+  height: 100%;
+  padding: 6px 20px;
+  margin-top:-10px;
+
+  /* box-shadow: 0px 10px 43px 22px rgba(0,0,0,0.75); */
+  border: 2px solid green; 
+  /* text-align: center; */
+  /* position: relative; */
+  /* display: inline-block */
+}
+
+.users-library {
+  color: rgb(0, 0, 0);
+  grid-area: main;
+  border: 2px solid blue;
+  /* background-color: rgba(0,0,0,0.7); */
+  /* box-shadow: 0px 10px 43px 22px rgba(0,0,0,0.75); */
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  grid-template-rows: auto;
+  grid-gap: 30px;
+  padding-top: 10px;
+  padding-bottom: 50px;
+  overflow: auto;
+  max-height: 100%;
+  max-width: 100%;
+  align-items: center;
+  padding-left: 10%;
+  padding-right: 10%;
+  
+}
+
+
+/* ----------------------- Nav -------------------------*/
+
+
+
+
+/* ----------------------- GamePage -------------------------*/
+
+.game-page {
+  display: grid;
+  grid-template-areas: 
+  "splash"
+  "cards"
+  ;
+}
+
+.game-splash {
+  grid-area: splash;
+}
+
+.user-cards-container {
+  grid-area: cards;
+}
+
+
+/* ----------------------- UserShow -------------------------*/
+
+
+
+
+/* ----------------------- Login -------------------------*/
+
+
+
+
+
+/* -----------------------  -------------------------*/
