--- a/src/style.css
+++ b/src/style.css
@@ -3,7 +3,33 @@ body {
 }
 
 #root {
-    height: 800px;
+    /* height: 100px;
+    width: 100%;
+    align-items: flex-start */
+}
+
+.inbox-container {
+    margin: 50px 0px;
+    height: 50vh;
+    width: 100%;
+}
+
+.chatbox-container {
+    height: 100%;
+    width: 100%;
+    /* background-color:#3B4B5B; */
+}
+
+
+
+
+
+.fab {
+    /* position: -webkit-sticky;
+    position: sticky;
+    bottom: 1rem;
+    align-self: flex-end;
+     */
 }
 
 
